--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>A Lone Dwelling</title>
-    <p>Version 0.0.0</p>
+    <p>Version 0.0.1</p>
     <br>
 
     <link rel="stylesheet" href="stylesheet.css" />
@@ -19,11 +19,8 @@
             <td>
                 <div id="woodcutter_field">
                     Woodcutter
-                    <div id="woodcutter_value">
-                        1
-                    </div>
-                    <button onclick="edit('woodcutter_value',1)">+</button>
-                    <button onclick="edit('woodcutter_value',-1)">-</button>
+                    <div id="woodcutter_value">1</div>
+                    <button onclick="edit('woodcutter_value',1)">+</button><button onclick="edit('woodcutter_value',-1)">-</button>
                 </div>
             </td>
             <td>
