--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>A Lone Dwelling</title>
-    <p>Version 0.0.1</p>
+    <p>Version 0.0.2</p>
     <br>
 
     <link rel="stylesheet" href="stylesheet.css" />
@@ -17,11 +17,10 @@
         </tr>
         <tr>
             <td>
-                <div id="woodcutter_field">
-                    Woodcutter
-                    <div id="woodcutter_value">1</div>
-                    <button onclick="edit('woodcutter_value',1)">+</button><button onclick="edit('woodcutter_value',-1)">-</button>
+                <div id="woodcutter">
+                    Woodcutter: -
                 </div>
+                <button onclick="edit('woodcutter_value',1)">+</button><button onclick="edit('woodcutter_value',-1)">-</button>
             </td>
             <td>
 
