made basic skeleton

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
         </tr>
         <tr>
             <td>
-                <div id="woodcutter">
-                    Woodcutter: -
-                </div>
-                <button onclick="edit('woodcutter_value',1)">+</button><button onclick="edit('woodcutter_value',-1)">-</button>
+                <div id="woodcutter">Woodcutter: -</div>
+                <button onclick="add_to_cookie('woodcutter',1)">+</button>
+                <button onclick="add_to_cookie('woodcutter',-1)">-</button>
             </td>
             <td>
 
@@ -29,7 +28,7 @@
 
             </td>
             <td>
-                <div id="wood">-</div>
+                <div id="wood">Wood: -</div>
 
 
             </td>
