formatting and added people

--- a/index.html
+++ b/index.html
@@ -17,18 +17,24 @@
         </tr>
         <tr>
             <td>
+                <div id="people">People: -</div>
+                <br />
                 <div id="woodcutter">Woodcutter: -</div>
                 <button onclick="add_to_cookie('woodcutter',1)">+</button>
                 <button onclick="add_to_cookie('woodcutter',-1)">-</button>
-            </td>
-            <td>
+                <br />
+
 
             </td>
             <td>
 
             </td>
             <td>
-                <div id="wood">Wood: -</div>
+
+            </td>
+            <td>
+                <div id="wood">Wood: -</div><br />
+                
 
 
             </td>
