--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 
             </td>
             <td>
+                <div id="happiness">Happiness: -</div><br />
                 <div id="wood">Wood: -</div><br />
                 <div id="refined_wood">Refined Wood: -</div><br />
+                
 
 
 
