added hunter minor changes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </tr>
         <tr>
             <td>
-                <div id="people">People: -</div>
-                <br />
+                <div id="population">Population: -</div><br />
+                <div id="people">People: -</div><br />
                 <div id="woodcutter_field">
                     <div id="woodcutter">Woodcutter: -</div>
                     <button onclick="add_to_cookie('woodcutter',1)">+</button>
@@ -30,6 +30,12 @@
                     <div id="wood_refiner">Wood refiner: -</div>
                     <button onclick="add_to_cookie('wood_refiner',1)">+</button>
                     <button onclick="add_to_cookie('wood_refiner',-1)">-</button>
+                    <br />
+                </div>
+                <div id="hunter_field">
+                    <div id="hunter">Hunter: -</div>
+                    <button onclick="add_to_cookie('hunter',1)">+</button>
+                    <button onclick="add_to_cookie('hunter',-1)">-</button>
                     <br />
                 </div>
                 
@@ -50,7 +56,8 @@
             <td>
                 <div id="happiness">Happiness: -</div><br />
                 <div id="wood">Wood: -</div><br />
-                <div id="refined_wood">Refined Wood: -</div><br />
+                <div id="refined_wood">Refined Wood: -</div>
+                <div id="raw_meat">Raw Meat: -</div>
                 
 
 
