added default people

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>A Lone Dwelling</title>
-    <p>Version 0.0.7</p>
+    <p>Version 0.0.8</p>
     <br>
 
     <link rel="stylesheet" href="stylesheet.css" />
@@ -56,11 +56,8 @@
             <td>
                 <div id="happiness">Happiness: -</div><br />
                 <div id="wood">Wood: -</div><br />
-                <div id="refined_wood">Refined Wood: -</div>
-                <div id="raw_meat">Raw Meat: -</div>
-                
-
-
+                <div id="refined_wood">Refined Wood: -</div><br />
+                <div id="raw_meat">Raw Meat: -</div><br />
 
             </td>
         </tr>
